5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1861_1290.log
== TEST (2019-06-26 18:26:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input"x,y,z: "))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor.T
print(vetor)
-- ERROR:
File "XXXX", line 3
    vetor = array(eval(input"x,y,z: "))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:26:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input"x,y,z: "))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor.T
print(vetor)
-- ERROR:
File "XXXX", line 3
    vetor = array(eval(input"x,y,z: "))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:27:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(input"x,y,z: ")
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor.T
print(vetor)
-- ERROR:
File "XXXX", line 3
    vetor = array(input"x,y,z: ")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:27:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(input("x,y,z: "))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor.T
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:27:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(input("x,y,z: "))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor.T
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:27:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor.T
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor*60


print(horas)
print(round(vetor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:30:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor*60


print(horas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor*60
horasl = horas.T

print(horasl)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:35:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor*60
horasl = horas.T
trab = dot(tab,horasl)

print(trab)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:41:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor*60
horasl = horas.T
tabf = tab.T

print(tabf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:42:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor*60
horasl = horas.T
tabf = tab.T
resultado = tabf*horasl

print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:46:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor/60
horasl = horas.T
tabf = tab.T
resultado = tabf*horasl
for i in range(resultaado):
	for j in range(resultado):
		
print(resultado)

-- ERROR:
File "XXXX", line 12
    print(resultado)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor/60
horasl = horas.T
tabf = tab.T
resultado = tabf*horasl
for i in range(resultado):
	for j in range(resultado):
		
print(resultado)

-- ERROR:
File "XXXX", line 12
    print(resultado)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor/60
horasl = horas.T
tabf = tab.T
resultado = tabf*horasl

		
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor/60
horasl = horas.T
tabf = tab.T
resultado = tabf*horasl

		
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:49:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
vetor = array(eval(input("x,y,z: ")))
tab = array([[10,12,15],[6,8,12],[12,12,18]])
horas = vetor*60
horasl = horas.T
tabf = tab.T
resultado = tabf*horasl

		
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
